--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,5 +49,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/recyclerview"
+        android:id="@+id/buttonrecyclerview"
+        app:layout_constraintTop_toBottomOf="@id/buttonTouchEvent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/github_code_link"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/black"
+        android:layout_marginStart="@dimen/marginStart"
+        android:layout_marginTop="@dimen/marginStart"
+        android:layout_marginEnd="@dimen/marginStart"
+        android:layout_marginBottom="@dimen/marginStart"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buttonrecyclerview"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
