--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/dialog_toast"
+        android:id="@+id/buttonDialogToast"
+        app:layout_constraintTop_toBottomOf="@id/buttonrecyclerview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/broadcastreceiver"
+        android:id="@+id/buttonbroadcastreceiver"
+        app:layout_constraintTop_toBottomOf="@id/buttonDialogToast"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/service"
+        android:id="@+id/buttonService"
+        app:layout_constraintTop_toBottomOf="@id/buttonbroadcastreceiver"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -71,6 +99,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/buttonrecyclerview"/>
+        app:layout_constraintTop_toBottomOf="@id/buttonService"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
