--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,6 +85,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/thread"
+        android:id="@+id/buttonThreads"
+        app:layout_constraintTop_toBottomOf="@id/buttonService"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/memory_leak"
+        android:id="@+id/buttonMemoryLeak"
+        app:layout_constraintTop_toBottomOf="@id/buttonThreads"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/shared_pref"
+        android:id="@+id/buttonSharedPref"
+        app:layout_constraintTop_toBottomOf="@id/buttonMemoryLeak"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/enc_shared_pref"
+        android:id="@+id/buttonEncSharedPref"
+        app:layout_constraintTop_toBottomOf="@id/buttonSharedPref"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:layout_width="0dp"
@@ -99,6 +134,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/buttonService"/>
+        app:layout_constraintTop_toBottomOf="@id/buttonEncSharedPref"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
