[Added Rx,Room And Dagger Combined Sample][Ver 1.0][Author: Sumit][Bug:NA][Dependency:NA]

--- a/app/src/main/res/layout/activity_advanced.xml
+++ b/app/src/main/res/layout/activity_advanced.xml
@@ -49,6 +49,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/buttonRx"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/rx_room_dagger"
+        android:id="@+id/buttonRxRoomDagger"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buttonRxSearch"/>
+
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -62,6 +71,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/buttonRxSearch"/>
+        app:layout_constraintTop_toBottomOf="@id/buttonRxRoomDagger"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
